---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: ????
  Features:
    - Add preset for Nullius (Thanks to Anachrony's help).
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2022-02-20
  Bugfixes:
    - Fix infinite milestone not creating next step when backfilling a milestone with an estimation range.
    - Fix infinite milestones affecting the loaded set when it shouldn't.
  Changes:
    - Change all character kills in presets to increase by x5 instead of x2.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-02-20
  Features:
    - Infinite Milestones: 
      You can now set a "next" value for a milestone. When that milestone is completed, a new milestone is automatically created at a higher count, depending on that "next" value. 
      Example: "1000 science packs, next: x10" would create "10000 science packs" when completed, then "100000 science packs", etc. You can also use "+" for adding instead of multiplying.
    - You can now export or import encoded milestone sets (for a shorter, but non-human-readable string).
    - New "Compact list" Player Mod Setting, removes the "Completed at:" labels from the main view. Defaults to off.
  Changes:
    - Change presets to use infinite milestones. Existing sets won't be updated unless you reload them from the preset.
    - Labels now say "Killed at" and "Researched at" for kills and technologies
    - Replace "cargo rocket section" with "cargo rocket" in SE and SE+K2 presets
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-01-16
  Changes:
    - Add "Advanced pickaxe" to K2 and SE+K2 presets
    - Add debug commands to help debug and fix future crashes (use /h in-game to see them)
  Bugfixes: